--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,12 @@
             <version>1.7.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.4</version>
+        </dependency>
+
     </dependencies>
 
     <properties>
