--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,12 @@
             <version>2.4</version>
         </dependency>
 
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>jstl</artifactId>
+        </dependency>
+
+
     </dependencies>
 
     <properties>
